--- a/15-the-wild-oasis/package.json
+++ b/15-the-wild-oasis/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
